--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".MyProfileActivity">
+    tools:context=".Activities.MyProfileActivity">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
