--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
     android:fitsSystemWindows="true"
-    tools:context=".UserActivity">
+    tools:context=".Activities.UserActivity"
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
