--- a/app/src/main/res/layout/fragment_car.xml
+++ b/app/src/main/res/layout/fragment_car.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +10,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent">
 
         <TextView
             android:id="@+id/textView6"
@@ -122,6 +124,16 @@
             android:layout_marginBottom="-1dp"
             android:layout_toEndOf="@+id/saveButton"
             android:text="Matrícula" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/saveButton"
+            android:layout_toEndOf="@+id/seatsText"
+            android:background="@color/colorPrimary"
+            android:clickable="true"
+            android:src="@drawable/ic_mode_edit_black_24dp" />
 
     </RelativeLayout>
 
