--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
         tools:context=".ProfileActivity">
 
         <EditText
-            android:id="@+id/lastNameText"
+            android:id="@+id/usernameText"
             android:layout_width="300dp"
             android:layout_height="40dp"
             android:layout_alignEnd="@+id/imageView9"
@@ -60,6 +60,28 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
+            android:id="@+id/lastNameText"
+            android:layout_width="184dp"
+            android:layout_height="40dp"
+            android:layout_alignEnd="@+id/imageView9"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="156dp"
+            android:layout_marginEnd="36dp"
+            android:background="#11000000"
+            android:drawableLeft="@drawable/ic_action_face"
+            android:ems="10"
+            android:enabled="false"
+            android:hint=" Nome"
+            android:inputType="textPersonName"
+            android:padding="8dp"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.285"
+            app:layout_constraintStart_toEndOf="@+id/profilePhoto"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
             android:id="@+id/emailText"
             android:layout_width="300dp"
             android:layout_height="40dp"
@@ -79,7 +101,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lastNameText" />
+            app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
         <EditText
             android:id="@+id/phoneText"
@@ -134,7 +156,7 @@
             android:layout_marginBottom="8dp"
             app:civ_border_color="@color/colorPrimary"
             app:civ_border_width="3dp"
-            app:layout_constraintBottom_toTopOf="@+id/lastNameText"
+            app:layout_constraintBottom_toTopOf="@+id/usernameText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.105"
             app:layout_constraintStart_toStartOf="parent"
@@ -159,6 +181,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/musicText"
             app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Guardar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fab"
+            app:layout_constraintHorizontal_bias="0.549"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/musicText"
+            app:layout_constraintVertical_bias="0.065" />
+
+        <ImageView
+            android:id="@+id/changePhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimary"
+            android:src="@drawable/ic_add_circle_black_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.291"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.305" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
