--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,27 +8,6 @@
     tools:context=".Activities.SignUpActivity">
 
     <EditText
-        android:id="@+id/usernameText"
-        android:layout_width="184dp"
-        android:layout_height="40dp"
-        android:layout_alignEnd="@+id/imageView9"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
-        android:background="#11000000"
-        android:drawableLeft="@drawable/ic_action_name"
-        android:ems="10"
-        android:hint="Último Nome"
-        android:inputType="textPersonName"
-        android:padding="8dp"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.194"
-        app:layout_constraintStart_toEndOf="@+id/profilePhoto"
-        app:layout_constraintTop_toBottomOf="@+id/nameText" />
-
-    <EditText
         android:id="@+id/nameText"
         android:layout_width="184dp"
         android:layout_height="40dp"
@@ -45,7 +24,28 @@
         android:padding="8dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.194"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintStart_toEndOf="@+id/profilePhoto"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <EditText
+        android:id="@+id/lastNameText"
+        android:layout_width="184dp"
+        android:layout_height="40dp"
+        android:layout_alignEnd="@+id/imageView9"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="8dp"
+        android:background="#11000000"
+        android:drawableLeft="@drawable/ic_action_face"
+        android:ems="10"
+        android:hint="Último Nome"
+        android:inputType="textPersonName"
+        android:padding="8dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
         app:layout_constraintStart_toEndOf="@+id/profilePhoto"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -56,7 +56,7 @@
         android:layout_alignEnd="@+id/imageView9"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_email"
@@ -66,18 +66,18 @@
         android:padding="8dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameText" />
+        app:layout_constraintTop_toBottomOf="@+id/lastNameText" />
 
     <EditText
-        android:id="@+id/usernameText"
+        android:id="@+id/lastNameText"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_alignEnd="@+id/imageView9"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_name"
@@ -87,9 +87,9 @@
         android:padding="8dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameText" />
+        app:layout_constraintTop_toBottomOf="@+id/lastNameText" />
 
     <EditText
         android:id="@+id/passwordText"
@@ -107,7 +107,7 @@
         android:inputType="textPassword"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
@@ -127,7 +127,7 @@
         android:inputType="textPassword"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordText" />
 
@@ -138,7 +138,7 @@
         android:layout_alignEnd="@+id/imageView9"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_phone"
@@ -147,7 +147,7 @@
         android:inputType="phone"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordConfirm" />
 
@@ -218,7 +218,7 @@
         android:inputType="textMultiLine"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneText" />
 
@@ -239,7 +239,7 @@
         android:id="@+id/profilePhoto"
         android:layout_width="106dp"
         android:layout_height="87dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/camera"
         app:layout_constraintStart_toStartOf="parent"
