--- a/app/src/main/res/layout/activity_from.xml
+++ b/app/src/main/res/layout/activity_from.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
-    tools:context=".Activities.OfferActivity">
+    tools:context=".Activities.FromActivity">
 
     <com.mancj.materialsearchbar.MaterialSearchBar
         android:id="@+id/searchBar"
@@ -15,10 +14,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="154dp"
+        android:layout_marginTop="191dp"
         app:mt_hint="Custom hint"
-        app:mt_maxSuggestionsCount="10"/>
-
-
+        app:mt_maxSuggestionsCount="10" />
 
 </RelativeLayout>
