--- a/app/src/main/res/layout/cell_title_layout.xml
+++ b/app/src/main/res/layout/cell_title_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearTitleLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bgContent"
@@ -9,6 +10,7 @@
     <!-- LEFT TITLE PART -->
 
     <RelativeLayout
+        android:id="@+id/leftSideRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="155dp"
         android:layout_weight="3"
@@ -57,6 +59,7 @@
     <!-- RIGHT TITLE PART -->
 
     <RelativeLayout
+        android:id="@+id/rightTitleRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -149,7 +152,7 @@
             android:singleLine="true"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:text="@string/content_to1_mock"/>
+            android:text="@string/content_to_mock"/>
 
 
 
