--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="bgBackSideColor">#f4f0ff</color>
     <color name="bgTitleLeft">#137ff2</color>
     <color name="bgTitleRight">#ffffff</color>
-    <color name="bgContentTop">#594691</color>
+    <color name="bgContentTop">#021aee</color>
     <color name="bgContent">#ffffff</color>
     <color name="contentDividerLine">#e0e0e0</color>
     <color name="contentBadgeTitle">#a9a9a9</color>
